--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -180,9 +180,9 @@
     <ClCompile Include="..\..\..\..\test\utility\stream.cpp" />
     <ClCompile Include="..\..\..\..\test\utility\thread.cpp" />
     <ClCompile Include="..\..\..\..\test\utility\variable_uint_size.cpp" />
-    <ClCompile Include="..\..\..\..\test\wallet\bip38.cpp" />
+    <ClCompile Include="..\..\..\..\test\wallet\encrypted_keys.cpp" />
     <ClCompile Include="..\..\..\..\test\wallet\hd_keys.cpp" />
-    <ClCompile Include="..\..\..\..\test\wallet\key_formats.cpp" />
+    <ClCompile Include="..\..\..\..\test\wallet\wif_keys.cpp" />
     <ClCompile Include="..\..\..\..\test\wallet\message.cpp" />
     <ClCompile Include="..\..\..\..\test\wallet\mnemonic.cpp" />
     <ClCompile Include="..\..\..\..\test\wallet\stealth.cpp" />
