--- a/Makefile.am
+++ b/Makefile.am
@@ -161,7 +161,17 @@ src_libbitcoin_la_SOURCES = \
     src/wallet/stealth.cpp \
     src/wallet/stealth_address.cpp \
     src/wallet/uri.cpp \
-    src/wallet/wif_keys.cpp
+    src/wallet/wif_keys.cpp \
+    src/wallet/parse_encrypted_keys/parse_encrypted_key.hpp \
+    src/wallet/parse_encrypted_keys/parse_encrypted_key.ipp \
+    src/wallet/parse_encrypted_keys/parse_encrypted_prefix.hpp \
+    src/wallet/parse_encrypted_keys/parse_encrypted_prefix.ipp \
+    src/wallet/parse_encrypted_keys/parse_encrypted_private_key.cpp \
+    src/wallet/parse_encrypted_keys/parse_encrypted_private_key.hpp \
+    src/wallet/parse_encrypted_keys/parse_encrypted_public_key.cpp \
+    src/wallet/parse_encrypted_keys/parse_encrypted_public_key.hpp \
+    src/wallet/parse_encrypted_keys/parse_encrypted_token.cpp \
+    src/wallet/parse_encrypted_keys/parse_encrypted_token.hpp
 
 # local: examples/libbitcoin_examples
 #------------------------------------------------------------------------------
