Move encrytped key (serializable) primitives from bx to bc.

--- a/Makefile.am
+++ b/Makefile.am
@@ -51,6 +51,9 @@ src_libbitcoin_la_SOURCES = \
     src/config/btc256.cpp \
     src/config/checkpoint.cpp \
     src/config/directory.cpp \
+    src/config/ek_private.cpp \
+    src/config/ek_public.cpp \
+    src/config/ek_token.cpp \
     src/config/endpoint.cpp \
     src/config/parameter.cpp \
     src/config/printer.cpp \
@@ -310,6 +313,9 @@ include_bitcoin_bitcoin_config_HEADERS = \
     include/bitcoin/bitcoin/config/btc256.hpp \
     include/bitcoin/bitcoin/config/checkpoint.hpp \
     include/bitcoin/bitcoin/config/directory.hpp \
+    include/bitcoin/bitcoin/config/ek_private.hpp \
+    include/bitcoin/bitcoin/config/ek_public.hpp \
+    include/bitcoin/bitcoin/config/ek_token.hpp \
     include/bitcoin/bitcoin/config/endpoint.hpp \
     include/bitcoin/bitcoin/config/parameter.hpp \
     include/bitcoin/bitcoin/config/printer.hpp
