Add a generic RFC 3986 URI parser
This will provide support for other URI-based technologies like BitID.

--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -188,5 +188,6 @@
     <ClCompile Include="..\..\..\..\test\wallet\mnemonic.cpp" />
     <ClCompile Include="..\..\..\..\test\wallet\stealth.cpp" />
     <ClCompile Include="..\..\..\..\test\wallet\stealth_address.cpp" />
+    <ClCompile Include="..\..\..\..\test\wallet\uri.cpp" />
   </ItemGroup>
 </Project>
