--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -190,6 +190,7 @@
     <ClCompile Include="..\..\..\..\src\wallet\select_outputs.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\stealth.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\stealth_address.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\uri.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin.hpp" />
@@ -323,6 +324,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\select_outputs.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\stealth.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\stealth_address.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\uri.hpp" />
     <ClInclude Include="..\..\..\..\src\math\external\aes256.h" />
     <ClInclude Include="..\..\..\..\src\math\external\crypto_scrypt.h" />
     <ClInclude Include="..\..\..\..\src\math\external\hmac_sha256.h" />
