Create ec_private and split with ec_public from ec_keys, rationalize wallet primitives.

--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -99,7 +99,7 @@
     <ClCompile Include="..\..\..\..\src\formats\base85.cpp" />
     <ClCompile Include="..\..\..\..\src\math\checksum.cpp" />
     <ClCompile Include="..\..\..\..\src\math\crypto.cpp" />
-    <ClCompile Include="..\..\..\..\src\math\ec_keys.cpp" />
+    <ClCompile Include="..\..\..\..\src\math\elliptic_curve.cpp" />
     <ClCompile Include="..\..\..\..\src\math\external\aes256.c" />
     <ClCompile Include="..\..\..\..\src\math\external\crypto_scrypt.c" />
     <ClCompile Include="..\..\..\..\src\math\external\hmac_sha256.c" />
@@ -115,6 +115,7 @@
     <ClCompile Include="..\..\..\..\src\math\hash_number.cpp" />
     <ClCompile Include="..\..\..\..\src\math\script_number.cpp" />
     <ClCompile Include="..\..\..\..\src\math\secp256k1_initializer.cpp" />
+    <ClCompile Include="..\..\..\..\src\math\stealth.cpp" />
     <ClCompile Include="..\..\..\..\src\math\uint256.cpp" />
     <ClCompile Include="..\..\..\..\src\message\address.cpp" />
     <ClCompile Include="..\..\..\..\src\message\alert.cpp" />
@@ -176,20 +177,20 @@
     <ClCompile Include="..\..\..\..\src\utility\threadpool.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\variable_uint_size.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\dictionary.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\ec_public.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\encrypted_keys.cpp" />
-    <ClCompile Include="..\..\..\..\src\wallet\hd_private_key.cpp" />
-    <ClCompile Include="..\..\..\..\src\wallet\hd_public_key.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\hd_private.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\hd_public.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\mini_keys.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\parse_encrypted_keys\parse_ek_private.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\parse_encrypted_keys\parse_ek_public.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\parse_encrypted_keys\parse_ek_token.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\bitcoin_uri.cpp" />
-    <ClCompile Include="..\..\..\..\src\wallet\wif_keys.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\ec_private.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\message.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\mnemonic.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\payment_address.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\select_outputs.cpp" />
-    <ClCompile Include="..\..\..\..\src\wallet\stealth.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\stealth_address.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\uri.cpp" />
   </ItemGroup>
@@ -227,11 +228,12 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base85.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\checksum.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\crypto.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\ec_keys.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\elliptic_curve.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\hash.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\hash_number.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\script_number.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\secp256k1_initializer.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\stealth.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\uint256.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\messages.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\address.hpp" />
@@ -314,18 +316,18 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\writer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\version.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\bitcoin_uri.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\ec_public.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\uri_reader.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\encrypted_keys.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\dictionary.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\hd_private_key.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\hd_public_key.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\hd_private.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\hd_public.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\mini_keys.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\wif_keys.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\ec_private.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\message.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\mnemonic.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\payment_address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\select_outputs.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\stealth.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\stealth_address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\uri.hpp" />
     <ClInclude Include="..\..\..\..\src\math\external\aes256.h" />
